--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/node": "^20.14.2",
+    "element-plus": "^2.7.5",
     "vue": "^3.4.21",
     "vue-router": "^4.3.3"
   },
