--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^20.14.2",
     "element-plus": "^2.7.5",
+    "vite-plugin-pages": "^0.32.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.3"
   },
