--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@types/node": "^20.14.2",
     "element-plus": "^2.7.5",
+    "flatgeobuf": "^3.32.4",
+    "node-fetch": "^3.3.2",
     "ol": "^9.2.4",
     "pinia": "^2.1.7",
     "vite-plugin-pages": "^0.32.2",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "web-streams-polyfill": "^3.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
