--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/node": "^20.14.2",
+    "axios": "^1.7.2",
     "element-plus": "^2.7.5",
     "flatgeobuf": "^3.32.4",
     "node-fetch": "^3.3.2",
