--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "cesium": "^1.125.0",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
+    "vite": "^5.4.14",
+    "vite-plugin-cesium": "^1.2.23",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.6"
   }
